# RayTracerCopy

./: CMakeLists.txt  Goals  README.md  main.cpp  parser.cpp  parser.h  parserTest.cpp  path
CImg-2.2.1_pre030218/: README.txt
Control/: BoundingVolume.cpp  BoundingVolume.h  Color.cpp  Color.h  GlobalConstants.h  Ray.cpp  Ray.h  camera.h  vec3.h
Control/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.h
Deleted Classes/: Direction.cpp  Direction.h  Point.cpp  Point.h
Deleted Classes/ToReAdd/: Box.cpp  Box.h  Capsule.cpp  Capsule.h  Plane.cpp  Plane.h  main1.cpp  nonbvhmain.cpp
Shapes/: Box.cpp  Box.h  Capsule.cpp  Capsule.h  Plane.cpp  Plane.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
lpng1634/: CHANGES  INSTALL  libpng-manual.txt  libpng.3
lpng1634/contrib/gregbook/: Makefile.w32
lpng1634/contrib/libtests/: gentests.sh
lpng1634/contrib/pngminim/decoder/: makefile
lpng1634/contrib/pngminim/encoder/: makefile
lpng1634/contrib/pngminim/preader/: makefile
lpng1634/contrib/tools/: chkfmt
lpng1634/contrib/visupng/: VisualPng.dsp
lpng1634/projects/visualc71/: libpng.vcproj  pngtest.vcproj  zlib.vcproj
lpng1634/scripts/: makefile.32sunu  makefile.64sunu  makefile.aix  makefile.amiga  makefile.beos  makefile.cegcc  makefile.darwin  makefile.hp64  makefile.hpgcc  makefile.hpux  makefile.intel  makefile.linux  makefile.linux-opt  makefile.msys  makefile.sggcc  makefile.sgi  makefile.so9  makefile.solaris  makefile.solaris-x86  makefile.sunos  options.awk  smakefile.ppc
